Configuración PWA completa

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,10 +5,10 @@
   "background_color": "#fafafa",
   "display": "fullscreen",
   "scope": "/",
-  "start_url": "https:/aula13-4987e.firebaseapp.com",
+  "start_url": "127.0.0.1",
   "dir": "ltr",
   "lang": "es",
-  "description": "PWA para la organización de clases particulares",
+  "description": "PWA para organizar de clases particulares",
   "orientation": "any",
   "related_applications": [],
   "prefer_related_applications": false,
