--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,27 +1,37 @@
 {
   "index": "/index.html",
-  "assetGroups": [
-    {
-      "name": "app",
-      "installMode": "prefetch",
-      "resources": {
-        "files": [
-          "/favicon.ico",
-          "/index.html",
-          "/*.css",
-          "/*.js"
-        ]
-      }
-    }, {
-      "name": "assets",
-      "installMode": "lazy",
-      "updateMode": "prefetch",
-      "resources": {
-        "files": [
-          "/assets/**",
-          "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
-        ]
-      }
+  "assetGroups": [{
+    "name": "app",
+    "installMode": "prefetch",
+    "resources": {
+      "files": [
+        "/favicon.ico",
+        "/index.html",
+        "/*.css",
+        "/*.js"
+      ]
     }
-  ]
+  }, {
+    "name": "assets",
+    "installMode": "lazy",
+    "updateMode": "prefetch",
+    "resources": {
+      "files": [
+        "/assets/**",
+        "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
+      ]
+    }
+  }],
+  "dataGroups": [{
+    "name": "FirebaseAPI",
+    "urls": [
+      "https://aula13-4987e.firebaseio.com/**"
+    ],
+    "cacheConfig": {
+      "strategy": "freshness",
+      "maxAge": "2h",
+      "maxSize": 100,
+      "timeOut": "5s"
+    }
+  }]
 }
