--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,8 +13,7 @@
   "related_applications": [],
   "prefer_related_applications": false,
   "gcm_sender_id": "103953800507",
-  "icons": [
-    {
+  "icons": [{
       "src": "assets/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
