--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
     "core-js": "^2.5.4",
+    "css-utilities": "git+https://github.com/alejdev/css-utilities.git",
     "firebase": "^5.9.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
