--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#fafafa",
   "display": "fullscreen",
   "scope": "/",
-  "start_url": "127.0.0.1",
+  "start_url": "https://aula13-4987e.firebaseapp.com/",
   "dir": "ltr",
   "lang": "es",
   "description": "PWA para organizar de clases particulares",
