--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
+    "build:serve": "ng build --prod & http-server dist/aula13",
+    "deploy": "ng build --prod & firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build:serve": "ng build --prod & http-server dist/aula13"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
