--- a/firebase.json
+++ b/firebase.json
@@ -6,11 +6,40 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }],
+    "headers": [{
+      "source": "*.@(*.css)",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=31536000"
+      }]
+    }, {
+      "source": "*.@(*.js)",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=31536000"
+      }]
+    }, {
+      "source": "*.@(eot|otf|ttf|ttc|woff|woff2|font.css)",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=31536000"
+      }]
+    }, {
+      "source": "**/*.@(jpg|jpeg|gif|png|svg)",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=31536000"
+      }]
+    }, {
+      "source": "404.html",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=31536000"
+      }]
+    }]
   }
 }
