Change manifest configuration

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,15 @@
 {
-  "name": "Aula 13",
-  "short_name": "aula13",
-  "theme_color": "#1976d2",
-  "background_color": "#fafafa",
-  "display": "fullscreen",
+  "name": "Aula 13 project",
+  "short_name": " Aula 13",
+  "theme_color": "#2c365b",
+  "background_color": "#ffffff",
+  "display": "standalone",
+  "orientation": "portrait",
   "scope": "/",
-  "start_url": "https://aula13-4987e.firebaseapp.com/",
+  "start_url": "/",
   "dir": "ltr",
   "lang": "es",
-  "description": "PWA para organizar de clases particulares",
-  "orientation": "any",
+  "description": "La app que te ayuda con la organización de tus alumnos y clases particulares.",
   "related_applications": [],
   "prefer_related_applications": false,
   "gcm_sender_id": "103953800507",
