new cache config

--- a/firebase.json
+++ b/firebase.json
@@ -11,25 +11,13 @@
       "destination": "/index.html"
     }],
     "headers": [{
-      "source": "*.@(*.css)",
+      "source": "*.@(*.css|js)",
       "headers": [{
         "key": "Cache-Control",
         "value": "max-age=31536000"
       }]
     }, {
-      "source": "*.@(*.js)",
-      "headers": [{
-        "key": "Cache-Control",
-        "value": "max-age=31536000"
-      }]
-    }, {
-      "source": "*.@(eot|otf|ttf|ttc|woff|woff2|font.css)",
-      "headers": [{
-        "key": "Cache-Control",
-        "value": "max-age=31536000"
-      }]
-    }, {
-      "source": "**/*.@(jpg|jpeg|gif|png|svg)",
+      "source": "**/*.@(*)",
       "headers": [{
         "key": "Cache-Control",
         "value": "max-age=31536000"
