--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 # Firebase Patch #
 .runtimeconfig.json
 .firebase/
+/src/environments/environment.prod.ts
+/src/environments/environment.ts
 
 # Only exists if Bazel was run
 /bazel-out
