--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/dev",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -35,7 +35,6 @@
           },
           "configurations": {
             "production": {
-              "outputPath": "dist/prod",
               "fileReplacements": [
                 {
                   "replace": "src/environments/dev.ts",
