--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": [{
       "target": "dev",
-      "public": "dist/dev",
+      "public": "dist",
       "ignore": [
         "firebase.json",
         "**/.*",
@@ -10,11 +10,30 @@
       "rewrites": [{
         "source": "**",
         "destination": "/index.html"
+      }],
+      "headers": [{
+        "source": "*.@(*.css|js)",
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=31536000"
+        }]
+      }, {
+        "source": "**/*.@(*)",
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=31536000"
+        }]
+      }, {
+        "source": "404.html",
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=31536000"
+        }]
       }]
     },
     {
       "target": "prod",
-      "public": "dist/prod",
+      "public": "dist",
       "ignore": [
         "firebase.json",
         "**/.*",
