--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --prod",
-    "build:all": "ng build & ng build --prod",
-    "deploy": "ng build & firebase deploy --only hosting:dev",
+    "deploy": "ng build --prod & firebase deploy --only hosting:dev",
     "deploy:prod": "ng build --prod & firebase deploy --only hosting:prod",
-    "deploy:all": "ng build & ng build --prod & firebase deploy --only hosting",
-    "serve": "ng build & firebase serve --only hosting:dev",
+    "deploy:all": "ng build --prod & firebase deploy --only hosting",
+    "serve": "ng build --prod & firebase serve --only hosting:dev",
     "serve:prod": "ng build --prod & firebase serve --only hosting:prod",
     "test": "ng test",
     "lint": "ng lint",
