--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "name": "Aula 13",
   "short_name": " Aula 13",
   "description": "La app que te ayuda con la organización de tus alumnos y clases particulares.",
-  "theme_color": "#088767",
+  "theme_color": "#0259af",
   "background_color": "#ffffff",
   "display": "standalone",
   "orientation": "portrait",
