--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "short_name": " Aula 13",
   "description": "La app que te ayuda con la organización de tus alumnos y clases particulares.",
   "theme_color": "#0259af",
-  "background_color": "#ffffff",
+  "background_color": "#0259af",
   "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
@@ -14,11 +14,11 @@
   "prefer_related_applications": false,
   "gcm_sender_id": "103953800507",
   "icons": [{
-    "src": "/assets/icons/icon-192x192.png",
+    "src": "/assets/icons/android-chrome-192x192.png",
     "sizes": "192x192",
     "type": "image/png"
   }, {
-    "src": "/assets/icons/icon-512x512.png",
+    "src": "/assets/icons/android-chrome-512x512.png",
     "sizes": "512x512",
     "type": "image/png"
   }]
