--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "build:prod": "ng build --prod",
-    "deploy": "ng build --prod & firebase deploy --only hosting:dev",
-    "deploy:prod": "ng build --prod & firebase deploy --only hosting:prod",
-    "deploy:all": "ng build --prod & firebase deploy --only hosting",
-    "serve": "ng build --prod & firebase serve --only hosting:dev",
-    "serve:prod": "ng build --prod & firebase serve --only hosting:prod",
+    "build": "ng lint && ng build --prod",
+    "deploy": "npm run build & firebase deploy --only hosting:dev",
+    "deploy:prod": "npm run build & firebase deploy --only hosting:prod",
+    "deploy:all": "npm run build & firebase deploy --only hosting",
+    "serve": "npm run build & firebase serve --only hosting:dev",
+    "serve:prod": "npm run build & firebase serve --only hosting:prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
@@ -46,9 +48,9 @@
     "@angular/cli": "~7.3.6",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -57,6 +59,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "pre-commit": "^1.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
