--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,8 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "es5BrowserSupport": true
+            "es5BrowserSupport": true,
+            "aot": true
           },
           "configurations": {
             "production": {
