--- a/angular.json
+++ b/angular.json
@@ -53,8 +53,7 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "es5BrowserSupport": true,
-            "aot": true
+            "es5BrowserSupport": true
           },
           "configurations": {
             "production": {
