--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "css-utilities": "git+https://github.com/alejdev/css-utilities.git",
     "firebase": "^5.9.4",
     "hammerjs": "^2.0.8",
+    "ngx-ui-loader": "^8.0.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
