Fix dark-light theme colors

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,8 @@
   "name": "Aula 13",
   "short_name": " Aula 13",
   "description": "La app que te ayuda con la organización de tus alumnos y clases particulares.",
-  "theme_color": "#0259af",
-  "background_color": "#0259af",
+  "theme_color": "#0084ff",
+  "background_color": "#0084ff",
   "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
