--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve:prod": "npm run build & firebase serve --only hosting:prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/*.json --clean --sort --format namespaced-json --marker _"
   },
   "pre-commit": [
     "lint"
@@ -28,17 +29,21 @@
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.0.0",
     "@angular/material": "^8.0.0",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/pwa": "^0.12.4",
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "~8.0.0",
+    "@ckeditor/ckeditor5-angular": "^1.1.2",
+    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.5.4",
     "css-utilities": "git+https://github.com/alejdev/css-utilities.git",
     "firebase": "^5.9.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "ngx-ui-loader": "^8.0.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
@@ -49,6 +54,7 @@
     "@angular/cli": "~8.0.1",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
+    "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
