--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
-    "@angular/cdk": "^8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.0.3",
+    "@angular/compiler": "^8.0.3",
+    "@angular/core": "^8.0.3",
     "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.0.0",
-    "@angular/material": "^8.0.0",
+    "@angular/forms": "^8.0.3",
+    "@angular/material": "^8.2.3",
     "@angular/material-moment-adapter": "^8.2.3",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/platform-browser": "^8.0.3",
+    "@angular/platform-browser-dynamic": "^8.0.3",
     "@angular/pwa": "^0.12.4",
-    "@angular/router": "~8.0.0",
-    "@angular/service-worker": "~8.0.0",
+    "@angular/router": "^8.0.3",
+    "@angular/service-worker": "^8.0.3",
     "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ngx-translate/core": "^11.0.1",
@@ -44,15 +44,14 @@
     "firebase": "^5.9.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
-    "ngx-ui-loader": "^8.0.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.1",
-    "@angular/compiler-cli": "~8.0.0",
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler-cli": "^8.0.3",
     "@angular/language-service": "~8.0.0",
     "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@types/jasmine": "~2.8.8",
