--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
   "dependencies": {
     "@angular/animations": "~8.0.0",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.0.3",
-    "@angular/compiler": "^8.0.3",
-    "@angular/core": "^8.0.3",
-    "@angular/fire": "^5.2.1",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.0.3",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/fire": "^5.2.3",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "^8.2.3",
     "@angular/material-moment-adapter": "^8.2.3",
-    "@angular/platform-browser": "^8.0.3",
-    "@angular/platform-browser-dynamic": "^8.0.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/pwa": "^0.12.4",
-    "@angular/router": "^8.0.3",
-    "@angular/service-worker": "^8.0.3",
+    "@angular/router": "^8.2.14",
+    "@angular/service-worker": "^8.2.14",
     "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ngx-translate/core": "^11.0.1",
@@ -49,20 +49,20 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/build-angular": "^0.800.6",
     "@angular/cli": "^8.3.20",
-    "@angular/compiler-cli": "^8.0.3",
-    "@angular/language-service": "~8.0.0",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.0.3",
     "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "pre-commit": "^1.2.2",
