--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng lint && ng build --prod",
+    "build": "ng build --prod",
     "deploy": "npm run build & firebase deploy --only hosting:dev",
     "deploy:prod": "npm run build & firebase deploy --only hosting:prod",
     "deploy:all": "npm run build & firebase deploy --only hosting",
