--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "private": true,
   "dependencies": {
+    "@alejdev/css-utilities": "^0.1.1",
     "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.14",
@@ -44,7 +45,6 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "codelyzer": "^5.2.0",
     "core-js": "^3.5.0",
-    "css-utilities": "git+https://github.com/alejdev/css-utilities.git",
     "firebase": "^7.6.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
