--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@nguniversal/express-engine": "^8.2.6",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "codelyzer": "^5.2.0",
