--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@nguniversal/express-engine": "^8.2.6",
     "@ngx-translate/core": "^11.0.1",
