--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "firebase": "^7.6.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "ngx-skeleton-loader": "^2.9.1",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "^0.9.1"
