--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aula13",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,6 +18,13 @@
   "pre-commit": [
     "lint"
   ],
+  "bugs": {
+    "url": "https://github.com/alejdev/aula13/issues"
+  },
+  "engines": {
+    "npm": ">=6.4.0",
+    "node": ">=10.13.0"
+  },
   "private": true,
   "dependencies": {
     "@alejdev/css-utilities": "^0.1.1",
